testsuite/tests/patsyn/should_compile/T9975a.stderr
T9975a.hs:5:13: error: [GHC-29916] Multiple declarations of ‘Test’
    At: T9975a.hs:5:13-29
        T9975a.hs:6:1-35

